Adding HR Services, common, logging, dependencies, service references

--- a/Source/HRHiringTool/HRHiringTool/Web.config
+++ b/Source/HRHiringTool/HRHiringTool/Web.config
@@ -21,6 +21,31 @@
 			</sectionGroup>
 		</sectionGroup>
 	</configSections>
+  <!--Logging/Logger-->
+  <loggingConfiguration name="Logging Application Block" tracingEnabled="true"
+    defaultCategory="" logWarningsWhenNoCategoriesMatch="true">
+    <listeners>
+      <add fileName="..\Logs\HRHiringTool.log" footer="" formatter="Text Formatter"
+      rollFileExistsBehavior="Increment" rollInterval="Day" rollSizeKB="5120" timeStampPattern="-yyyy-MM-dd"
+      listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.RollingFlatFileTraceListenerData, Microsoft.Practices.EnterpriseLibrary.Logging, Version=4.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
+      traceOutputOptions="None" filter="All" type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.RollingFlatFileTraceListener, Microsoft.Practices.EnterpriseLibrary.Logging, Version=4.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
+      name="FlatFile TraceListener" />
+    </listeners>
+    <formatters>
+      <add template="{timestamp(local)}  {category}	{severity}	{message}"
+        type="Microsoft.Practices.EnterpriseLibrary.Logging.Formatters.TextFormatter, Microsoft.Practices.EnterpriseLibrary.Logging, Version=4.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
+        name="Text Formatter" />
+    </formatters>
+    <specialSources>
+      <allEvents switchValue="All" name="All Events">
+        <listeners>
+          <add name="FlatFile TraceListener" />
+        </listeners>
+      </allEvents>
+      <notProcessed switchValue="All" name="Unprocessed Category" />
+      <errors switchValue="All" name="Logging Errors &amp; Warnings" />
+    </specialSources>
+  </loggingConfiguration>
 	<appSettings/>
 	<connectionStrings>
 		<add name="ApplicationServices" connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|aspnetdb.mdf;User Instance=true" providerName="System.Data.SqlClient"/>
@@ -121,8 +146,7 @@
 			</compiler>
 		</compilers>
 	</system.codedom>
-	<system.web.extensions/>
-	<!-- 
+ <!-- 
         The system.webServer section is required for running ASP.NET AJAX under Internet
         Information Services 7.0.  It is not necessary for previous version of IIS.
   -->
@@ -154,4 +178,37 @@
 			</dependentAssembly>
 		</assemblyBinding>
 	</runtime>
+ <system.serviceModel>
+  <bindings>
+   <wsHttpBinding>
+    <binding name="WSHttpBinding_IHiringServices" closeTimeout="00:01:00"
+     openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
+     bypassProxyOnLocal="false" transactionFlow="false" hostNameComparisonMode="StrongWildcard"
+     maxBufferPoolSize="524288" maxReceivedMessageSize="65536" messageEncoding="Text"
+     textEncoding="utf-8" useDefaultWebProxy="true" allowCookies="false">
+     <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
+      maxBytesPerRead="4096" maxNameTableCharCount="16384" />
+     <reliableSession ordered="true" inactivityTimeout="00:10:00"
+      enabled="false" />
+     <security mode="Message">
+      <transport clientCredentialType="Windows" proxyCredentialType="None"
+       realm="">
+       <extendedProtectionPolicy policyEnforcement="Never" />
+      </transport>
+      <message clientCredentialType="Windows" negotiateServiceCredential="true"
+       algorithmSuite="Default" establishSecurityContext="true" />
+     </security>
+    </binding>
+   </wsHttpBinding>
+  </bindings>
+  <client>
+   <endpoint address="http://localhost:55307/HiringServices.svc"
+    binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IHiringServices"
+    contract="HiringService.IHiringServices" name="WSHttpBinding_IHiringServices">
+    <identity>
+     <dns value="localhost" />
+    </identity>
+   </endpoint>
+  </client>
+ </system.serviceModel>
 </configuration>
