--- a/Source/HRHiringTool/HRHiringTool.Common/HRHiringTool.Common.csproj
+++ b/Source/HRHiringTool/HRHiringTool.Common/HRHiringTool.Common.csproj
@@ -8,7 +8,7 @@
     <ProjectGuid>{100E125D-4062-4B4D-96D9-628E9080DDC7}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ClassLibrary1</RootNamespace>
+    <RootNamespace>HRHiringTool.Common</RootNamespace>
     <AssemblyName>HRHiringTool.Common</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
