--- a/trunk/Source/HRHiringTool/HRHiringTool/HRHiringTool.Presentation.csproj
+++ b/trunk/Source/HRHiringTool/HRHiringTool/HRHiringTool.Presentation.csproj
@@ -1,4 +1,5 @@
-﻿<Project ToolsVersion="3.5" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project ToolsVersion="3.5" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -97,7 +98,10 @@
     </None>
     <Content Include="Views\Home\HRUserHome.ascx" />
     <Content Include="Views\Opening\ActiveOpenings.ascx" />
+    <Content Include="Views\Opening\OpeningCandidate.ascx" />
+    <Content Include="Views\Opening\OpeningCandidatesList.ascx" />
     <Content Include="Views\Opening\OpeningDetails.ascx" />
+    <Content Include="Views\Opening\silueta.png" />
     <Content Include="Web.config" />
     <Content Include="Content\Site.css" />
     <Content Include="Scripts\jquery-1.4.1.js" />
