--- a/Source/HRHiringTool/HRHiringTool.DataAccess/HRHiringTool.DataAccess.csproj
+++ b/Source/HRHiringTool/HRHiringTool.DataAccess/HRHiringTool.DataAccess.csproj
@@ -52,6 +52,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\CandidateData.cs" />
     <Compile Include="Model\HRHiringTool.Designer.cs">
       <DependentUpon>HRHiringTool.edmx</DependentUpon>
       <AutoGen>True</AutoGen>
@@ -66,7 +67,7 @@
     </EntityDeploy>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Classes\" />
+    <None Include="App.Config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
