--- a/trunk/Source/HRHiringTool/HRHiringTool/HRHiringTool.Presentation.csproj
+++ b/trunk/Source/HRHiringTool/HRHiringTool/HRHiringTool.Presentation.csproj
@@ -74,6 +74,7 @@
   <ItemGroup>
     <Compile Include="Classes\HRConstants.cs" />
     <Compile Include="Classes\Message.cs" />
+    <Compile Include="Classes\User.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
@@ -87,6 +88,13 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Shared\UserAwareness.ascx.cs">
+      <DependentUpon>UserAwareness.ascx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Views\Shared\UserAwareness.ascx.designer.cs">
+      <DependentUpon>UserAwareness.ascx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -110,6 +118,7 @@
     <Content Include="Views\Position\SkillLine.ascx" />
     <Content Include="Views\Position\SkillSet.ascx" />
     <Content Include="Views\Shared\LatestUpdates.ascx" />
+    <Content Include="Views\Shared\UserAwareness.ascx" />
     <Content Include="Web.config" />
     <Content Include="Content\Site.css" />
     <Content Include="Scripts\jquery-1.4.1.js" />
