--- a/Source/HRHiringTool/HRHiringTool/HRHiringTool.Presentation.csproj
+++ b/Source/HRHiringTool/HRHiringTool/HRHiringTool.Presentation.csproj
@@ -110,6 +110,7 @@
     <Content Include="Views\Opening\ActiveOpenings.ascx" />
     <Content Include="Views\Opening\OpeningCandidate.ascx" />
     <Content Include="Views\Opening\OpeningCandidatesList.ascx" />
+    <Content Include="Views\Opening\OpeningConversationHistory.ascx" />
     <Content Include="Views\Opening\OpeningDetails.ascx" />
     <Content Include="Views\Opening\silueta.png" />
     <Content Include="Views\Position\PositionView.ascx" />
