Agregó la página Index.aspx para Opening

--- a/Source/HRHiringTool/HRHiringTool.DataAccess/HRHiringTool.DataAccess.csproj
+++ b/Source/HRHiringTool/HRHiringTool.DataAccess/HRHiringTool.DataAccess.csproj
@@ -66,6 +66,9 @@
     </EntityDeploy>
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.Config" />
+  </ItemGroup>
+  <ItemGroup>
     <Folder Include="Classes\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
