Se agregó query para obtener el user id con base en el user name y agregarlo al session, se agregó la columna usrname al modelo en la tabla User

--- a/Source/HRHiringTool/HRHiringTool.DataAccess/HRHiringTool.DataAccess.csproj
+++ b/Source/HRHiringTool/HRHiringTool.DataAccess/HRHiringTool.DataAccess.csproj
@@ -53,6 +53,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Classes\OpeningRepository.cs" />
+    <Compile Include="Classes\UserQueries.cs" />
     <Compile Include="Model\HRHiringTool.Designer.cs">
       <DependentUpon>HRHiringTool.edmx</DependentUpon>
       <AutoGen>True</AutoGen>
@@ -65,6 +66,9 @@
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>HRHiringTool.Designer.cs</LastGenOutput>
     </EntityDeploy>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.Config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
